[package]
name = "canonicaljson-wasm"
version = "0.1.0"
authors = ["Mathieu Leplatre <mathieu@mozilla.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
canonical_json = { version = "0.1.0", path = "../remote-settings-client/src/client/signatures/canonical_json" }